--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,33 @@
+name: Publish
+
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v5
+
       - name: Install Dependencies
         run: |
           pip install -r "scripts/requirements.txt"
 
       - name: Build directory
         run: |
-          python full_build.py --url "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+          python build.py --url "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./build
+      
+      - name: Publish
+        uses: actions/configure-pages@v5
+
+      
