--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,6 @@ jobs:
           path: ./build
       
       - name: Publish
-        uses: actions/configure-pages@v5
+        uses: actions/deploy-pages@v4
 
       
